Fix content wider than screen

--- a/pages/aGeom_line.html
+++ b/pages/aGeom_line.html
@@ -65,7 +65,7 @@ Prvý vektor, ktorý potrebujeme, je normálový vektor. Ten zo smerového vekto
 Druhý vektor dostaneme z bodu A a z bodu X klasicky odčítaním súradníc $\vec{v}[x-a_x,y-a_y]$.<br /><br />
 
 Teraz už len overíme, či sa ich skalárny súčin rovná 0. Ak rovnica bude platiť, bod leží na priamke.
-
+<div class='overflowedItem'>
 $$
 \begin{align}
 \vec{n} \cdot \vec{v} & = 0 \\
@@ -75,9 +75,9 @@ s_y x - s_x y - s_y a_x + s_x a_y & = 0 \\
 s_y x - s_x y - (s_y a_x - s_x a_y) & = 0
 \end{align}
 $$
-
+</div>
 Rovnaký výsledok dostaneme, keď všeobecnú rovnicu odvodíme od parametrickej rovnice.
-
+<div class='overflowedItem'>
 $$
 \begin{align}
 X & = A + t\vec{s} \\
@@ -92,7 +92,7 @@ s_y x - s_x y & = s_y a_x - s_x a_y \\
 s_y x - s_x y - (s_y a_x - s_x a_y) & = 0
 \end{align}
 $$
-
+</div>
 Na chvíľu prehoďme kúsok rovnice na druhú stranu.
 
 $$ s_y x - s_x y = (s_y a_x - s_x a_y) $$
@@ -134,7 +134,7 @@ f) Tu dopočítame dĺžku fialového otáznika. Zoberieme y-ovú súradnicu bod
 g) Už len spočítame fialový a žltý otáznik a máme y-ovú súradnicu bodu X: $y=\frac{s_y}{s_x}x+a_y-\frac{s_y}{s_x}a_x$. Pre lepšiu čitateľnosť nahradíme tie škaredé zlomky písmenami. Dostali sme $y=kx+b$. Písmeno <b>k</b> sa nazýva <b>smernica</b> a hovorí o tom, ako veľmi <b>priamka rastie</b>. Písmeno <b>b</b> zas hovorí o <b>posunutí priamky na osi y</b>. Stavím sa, že si niečo podobné už videl. Rovnaký predpis má aj lineárna funkcia. Je to preto, lebo aj lineárna funkcia je vlastne priamka, na ktorej hľadáš y-ové súradnice k tým x-ovým.<br /><br />
 
 Smernicový tvar rovnice priamky vieme samozrejme odvodiť aj od všeobecnej rovnice priamky. Dosiahneme to tak, že osamostatníme y.
-
+<div class='overflowedItem'>
 $$
 \begin{align}
 s_y x – s_x y - (s_y a_x – s_x a_y) & = 0 \qquad / - s_y x + (s_y a_x – s_x a_y) \\
@@ -143,6 +143,7 @@ y & = \frac{s_y}{s_x} x + (a_y - \frac{s_y}{s_x} a_x) \\
 y & = kx + b
 \end{align}
 $$
+</div>
 
 <h2>Záver</h2>
 Priamka je daná dvomi bodmi. Vieme z nich spraviť smerový vektor. Prehodením súradníc a doplnením mínuska k jednej z nich dostaneme zo smerového vektora normálový vektor. Normálový vektor je kolmý na priamku.<br /><br />
