--- a/pages/aGeom_vectors.html
+++ b/pages/aGeom_vectors.html
@@ -123,7 +123,9 @@ Z vektorového súčinu sa tiež dozvieme niečo o tom, <b>ako veľmi sú vektor
 Rovnako ako skalárny súčin má algebraickú a aj geometrickú formu.<br /><br />
 
 Algebraický tvar: vyjadrí sa pomocou súradníc
-$$ \vec{v} \times \vec{u} = [u_{y} \cdot v_{z} - u_{z} \cdot v_{y}, u_{z} \cdot v_{x} - u_{x} \cdot v_{z}, u_{x} \cdot v_{y} - u_{y} \cdot v_{x}]$$
+<div class='overflowedItem'>
+$$ \vec{v} \times \vec{u} = [u_{y} \cdot v_{z} - u_{z} \cdot v_{y}, u_{z} \cdot v_{x} - u_{x} \cdot v_{z}, u_{x} \cdot v_{y} - u_{y} \cdot v_{x}] $$
+</div>
 
 Geometrický tvar: vyjadrí sa pomocou uhla medzi vektormi
 $$ \vec{v} \times \vec{u} = |\vec{v}| \cdot |\vec{u}| \cdot sin \alpha \cdot \vec{n} $$
