--- a/pages/gonio_SineCosineTangent.html
+++ b/pages/gonio_SineCosineTangent.html
@@ -90,34 +90,33 @@ else{
 Ak máš tabuľku vyrátanú, gratulujeme, tento odsek môžeš preskočiť. Ak sa ti nechce, tak sa prestaň zabávať hlúposťami a bež počítať. Ak nevieš ako začať rátať, dáme ti nápovedu:
 <ul>
 <li>
-Najprv si vypočítaj druhý a tretí riadok. Počíta sa tam 2*x a x+30. Nie je to nutnosť, ale poteší, keď to bude treba dosadiť do sínusu. Počíta sa to tak, že zoberieš daný uhol a dosadíš ho za x, napr.: <b>2*(-63)=-126</b>.
+Najprv si vypočítaj druhý a tretí riadok. Počíta sa tam 2*x a x+30. Nie je to nutnosť, ale poteší, keď to bude treba dosadiť do sínusu. Počíta sa to tak, že zoberieš daný uhol a dosadíš ho za x, napr.: <b>2*(-63) = -126</b>.
 </li>
 <li>
-Potom vypočítaj štvrtý riadok so sin(x). Tiež ho netreba, ale akoby si našiel, keď ho budeš používať ďalej a nebudeš musieť rátať stále to isté. Ráta sa tak, že sa uhol z prvého riadku dosadí za x a potom sa z toho vypočíta sínus, napr.: <b>sin(-63)=-0,89</b>.
+Potom vypočítaj štvrtý riadok so sin(x). Tiež ho netreba, ale akoby si našiel, keď ho budeš používať ďalej a nebudeš musieť rátať stále to isté. Ráta sa tak, že sa uhol z prvého riadku dosadí za x a potom sa z toho vypočíta sínus, napr.: <b>sin(-63) = -0,89</b>.
 </li>
 <li>
 V posledných štyroch riadkoch sa ráta sínus, ktorý je nejak zmenený, alebo sa aspoň mení x, ktoré doňho vstupuje.
 </li>
 <li>
-V piatom riadku je 2*sin(x). Tu najprv treba dosadiť uhol za x, spraviť z toho sínus a nakoniec to vynásobiť dvomi: <b>2*sin(-63)=2*(-0,89)=-1,78</b>.
+V piatom riadku je 2*sin(x). Tu najprv treba dosadiť uhol za x, spraviť z toho sínus a nakoniec to vynásobiť dvomi: <b>2*sin(-63) = 2*(-0,89) = -1,78</b>.
 </li>
 <li>
-V šiestom riadku je sin(2x). Tu treba najprv vypočítať 2x a potom z toho spraviť sínus. Keďže je 2x už vypočítané v druhom riadku, tu ho stačí len dosadiť. Napr.: <b>sin(2*(-63))=sin(-126)=-0,81</b>.
+V šiestom riadku je sin(2x). Tu treba najprv vypočítať 2x a potom z toho spraviť sínus. Keďže je 2x už vypočítané v druhom riadku, tu ho stačí len dosadiť. Napr.: <b>sin(2*(-63)) = sin(-126) = -0,81</b>.
 </li>
 <li>
-V siedmom riadku sa ráta 2+sin(x). Tu sa najprv spraví sínus x a potom sa k výsledku pripočíta dvojka. Napr.: <b>2+sin(-63)=2+(-0,81)=2-0,81=1,11</b>.
+V siedmom riadku sa ráta 2+sin(x). Tu sa najprv spraví sínus x a potom sa k výsledku pripočíta dvojka. Napr.: <b>2+sin(-63) = 2+(-0,81) = 2-0,81 = 1,11</b>.
 </li>
 <li>
-V poslednom ôsmom riadku je sin(x+30). Najprv sa dosadia stupne za x, pripočíta sa k nim ďalších 30 stupňov a z toho sa spraví sínus. Napr: <b>sin(-63+30)=sin(-33)=-0,54</b>.
+V poslednom ôsmom riadku je sin(x+30). Najprv sa dosadia stupne za x, pripočíta sa k nim ďalších 30 stupňov a z toho sa spraví sínus. Napr: <b>sin(-63+30) = sin(-33) = -0,54</b>.
 </li>
 </ul>
-
 
 
 Tu je pripravené malé matematické ihrisko, kde si môžeš sínus ponaťahovať do vôle. Všimni si, ako jednotlivé písmená menia graf. Pri hraní s grafom si daj pozor, lebo os <i>x</i> je v radiánoch, nie v stupňoch. Teda aj hodnota písmena <i>c</i> je v radiánoch a nie v stupňoch. To, ako písmenká menia graf nezávisí od jednotiek, v ktorých sú uvedené uhly. Teda takisto sa bude graf meniť, či uhly budú v stupňoch alebo v radiánoch.
 <br /><br />
 
-<div id="calculator" style="width: 800px; height: 480px;"></div>
+<div id="calculator" style="height: 480px;"></div>
 <script>
   var elt = document.getElementById('calculator');
   var calculator = Desmos.GraphingCalculator(elt);
@@ -228,7 +227,7 @@ else{
 Čo viac dodať ku kosínusu. Snáď len toľko, že si ho zaži na vlastnej koži. Os <i>x</i> je v radiánoch nie v stupňoch, tak dávaj pozor. To isté platí aj pre písmeno <i>c</i>.
 <br /><br />
 
-<div id="cosine" style="width: 800px; height: 480px;"></div>
+<div id="cosine" style="height: 480px;"></div>
 <script>
   var elt = document.getElementById('cosine');
   var calculator = Desmos.GraphingCalculator(elt);
@@ -342,7 +341,7 @@ else{
 Tu je pripravené ihrisko s tangensom. Môžeš grafu robiť zle koľko chceš, ale skús pri tom porozmýšľať, prečo je tangens práve taký, aký je. Aj tu máme pre teba upozornenie. Os <i>x</i> nie je v stupňoch, ale v radiánoch. Takisto aj písmeno <i>c</i> je v radiánoch. Skús prísť na to, že prečo <i>c</i> je v radiánoch a ostatné písmenká nemajú jednotky.
 <br /><br />
 
-<div id="tangens" style="width: 800px; height: 480px;"></div>
+<div id="tangens" style="height: 480px;"></div>
 <script>
   var elt = document.getElementById('tangens');
   var calculator = Desmos.GraphingCalculator(elt);
