--- a/pages/stat_PositionMeasures.html
+++ b/pages/stat_PositionMeasures.html
@@ -25,7 +25,14 @@ $$ \overline{x}=\frac{1}{n}\sum_{i=1}^n x_{i} $$
 
 Písmeno <i>x</i> označuje dáta. Pre nás je to <i>overall</i> hráčov. $\overline{x}$ označuje priemer z dát. Konkrétne priemer značí tá palička nad x-kom. Takže odteraz keď budeš vidieť paličku nad nejakým písmenom, budeš vedieť, že je to priemer. Ďalej tam je $\frac{1}{n}$. Písmeno <i>n</i> označuje počet dát, z ktorých sa ráta priemer. Možno si si už za svojho pôsobenia vo vzdelávacom systéme všimol, že keď násobíš zlomkom $\frac{1}{n}$, tak vlastne delíš n-kom. Ďalej je tam $\sum_{i=1}^n x_{i}$. Tým spočítaš všetky dáta. Pre nás to znamená zrátanie <i>overall</i> hráčov. Ak nevieš ako funguje suma, je to vysvetlené <a href="matematicko-slovensky_slovnik#vocabSuma" target="_blank">tu</a>. Zhrnutie vzorca je také, že zrátaš všetky dáta a vydelíš ich ich počtom.<br /><br />
 
-Priemer z hráčov Inter Milano vyrátame takto: $ \overline{overall}=\frac{1}{11}\sum_{i=1}^{11} overall_{i}=83,73 $. Zázrak dostať z takého vzorca výsledok, že? Nie je to však nič zložité, v hlave (na kalkulačke) rátaš normálne $\frac{88+88+86+85+85+84+82+81+81+81+80}{11} = 83,73$, len zápis je kratší.
+Priemer z hráčov Inter Milano vyrátame takto:
+<div class='overflowedItem'>
+$$ \overline{overall}=\frac{1}{11}\sum_{i=1}^{11} overall_{i}=83,73 $$
+</div>
+Zázrak dostať z takého vzorca výsledok, že? Nie je to však nič zložité, v hlave (na kalkulačke) rátaš normálne (suma je len kratší zápis):
+<div class='overflowedItem'>
+$$\frac{88+88+86+85+85+84+82+81+81+81+80}{11} = 83,73$$
+</div>
 
 <figure>
   <img src="../assets/images/stat_Mean.png" alt="=Rátanie priemeru">
