--- a/pages/stat_playerAnalysis.html
+++ b/pages/stat_playerAnalysis.html
@@ -11,6 +11,7 @@ permalink: analyza_udajov_o_futbalistoch
 
 Po dlhých kapitolách sme sa dostali na koniec a máme všetky potrebné nástroje štatistiky. Poznáme miery polohy, miery variability aj koreláciu. Ideme ich teda teraz aplikovať na futbalové tímy a konečne vyberieme jeden z nich. <br /><br />
 
+<div class='overflowedItem'>
 <table class="center statTable">
 <tr>
 <th>Názov klubu</th>
@@ -78,6 +79,7 @@ Po dlhých kapitolách sme sa dostali na koniec a máme všetky potrebné nástr
 <td>6.583</td>
 </tr>
 </table>
+</div>
 <br />
 
 Ako prvý sme vypočítali priemer pre každý zo 668 klubov a zoradili sme ich podľa neho od najlepšieho po najhorší. Sem do tabuľky sme si vybrali prvých päť najlepších klubov podľa priemeru. Vedľa priemeru sme vypočítali medián. Chceli sme si overiť, že priemer je správny. Teda že nemáme medzi klubmi nejaký, ktorý má samých slabých hráčov a jedného úplne geniálneho, ktorý potiahne priemer vysoko. Vidíme, že priemer a medián sa nám veľmi nelíšia, takže outlierov v kluboch nemáme.<br /><br />
