Only one H1 per page
And other small fixes

--- a/pages/gonio_SineCosineTangent.html
+++ b/pages/gonio_SineCosineTangent.html
@@ -19,7 +19,7 @@ Goniometrické funkcie vznikli z pomerov strán v pravouhlom trojuholníku. Nesk
 
 V článku <a href="goniometricke_funkcie" target="_blank">Goniometrické funkcie</a> je opísané, ako goniometrické funkcie vznikli a je tam aj bližšie vysvetlená definícia týchto funkcií na jednotkovej kružnici. <br /><br />
 
-<h1>Sínus</h1>
+<h2>Sínus</h2>
 V 12. storočí istý pán Gerardo z Cremony prekladal staré arabské texty o geometrii do latinčiny. Pri preklade slova "jiba" sa pomýlil a namiesto "jiba" prečítal "jaib". "Jiba" znamená  tetiva oblúka a "jaib" znamená záhyb na šatách. Asi mu to ani neprišlo čudné a tak sa latinské slovo "sinus", znamenajúce <b>záhyb na šatách</b>, udomácnilo v matematike. O štyri storočia neskôr, v roku 1590, slovo <b>"sinus"</b> použil pán Thomas Fale na pomenovanie <b>pomeru medzi protiľahlou stranou trojuholníka a jeho preponou.[1]</b><br /><br />
 
 Sínus, ako funkcia, je zadefinovaná na jednotkovej kružnici pomocou dĺžky jednej čiary. Je to konkrétne bledožltá čiara z obrázku 1. Na obrázku 2 je vysvetlené, prečo je to práve dĺžka tej čiary. 
@@ -34,7 +34,7 @@ Goniometrické funkcie a teda aj <b>sínus sa dá zobraziť viacerými spôsobmi
 
 <figure>
   <img src="../assets/images/gonio_sineExplanation.gif" alt="Sínus je zobrazený v tabuľke, grafe a na jednotkovej kružnici.">
-  <figcaption>Obr. 3.: Sínus je vypočítaný pre pár uhlov. Je zobrazený v grafe a na jednotkovej kružnici. Tabuľka by sa do obrázku nezmestila, tak je tam aspoň pre každý krok uvedený uhol a jeho hodnota. </b> </figcaption>
+  <figcaption>Obr. 3.: Sínus je vypočítaný pre pár uhlov. Je zobrazený v grafe a na jednotkovej kružnici. Tabuľka by sa do obrázku nezmestila, tak je tam aspoň pre každý krok uvedený uhol a jeho hodnota. </figcaption>
 </figure>
 
 
@@ -158,7 +158,7 @@ calculator.setExpression({
 <li>Ktorými písmenami sa dá otočiť graf tak, aby bol dolu hlavou (že od [0,0] nerastie hore k 1, ale klesá dole k -1)? Aké musia mať hodnoty? Prečo je to tak?</li>
 </ul>
 
-<h1>Kosínus</h1>
+<h2>Kosínus</h2>
 Pán <b>Edmund Gunter</b> sa narodil v Hertfordshire v roku 1581. Vyštudoval teológiu a stal sa anglickým duchovným. No jeho celoživotnou láskou bola matematika, teda hlavne vzťah medzi matematikou a reálnym svetom. Skoro sa stal aj jedným z prvých profesorov geometrie na Oxfordskej univerzite. Istý pán Savile daroval Oxfordu peniaze, aby si mohli otvoriť dve prvé prírodovedné fakulty - astronómiu a geometriu. Na pozíciu profesora geometrie sa hlásil aj Gunter. Na pracovný pohovor si doniesol niektoré vynálezy na určovanie vzdialenosti. Práve ukazoval, ako sa dajú zmerať vzdialenosti medzi hviezdami, keď ho prerušil pán Savile. Nakričal naňho, že to nie je geometria, ale len obyčajné predvádzanie trikov. Potom ho s výsmechom poslal domov. A tak sa pán Gunter nestal prvým profesorom geometrie na Oxforde. Veľká škoda sa nestala, lebo začal učiť inde. Stal sa profesorom astronómie v Londýne. Z jeho vynálezov je pre nás najdôležitejší jeden. <b>V roku 1620 použil prvý-krát slovo kosínus.[2] Toto slovo vzniklo z dvoch latinských slov <i>complementi sine</i>, ktoré <i>znamenajú doplnok k sínusu</i></b>.<br /><br />
 
 Kosínus ako funkcia je na jednotkovej kružnici definovaný pomocou dĺžky jednej čiary. Je to tmavožltá čiara z obrázku 1. Na obrázku 9 je vysvetlené, prečo je to práve tá tmavožltá čiara.
@@ -271,7 +271,7 @@ calculator.setExpression({
 <li>Ktorými písmenami sa dá otočiť graf tak, aby bol dolu hlavou (že neklesá od [0,1], ale rastie smerom od [0,-1] nahor)? Aké musia mať hodnoty? Prečo je to tak?</li>
 </ul>
 
-<h1>Tangens</h1>
+<h2>Tangens</h2>
 Albert Girard bol Francúz. Žil v Holandsku, mal rád hudbu, vyštudoval matematiku a robil inžiniera v armáde princa Oranžského. V skratke toľko o človeku, ktorý asi ako prvý na svete použil slovo tangens na pomenovanie pomeru medzi protiľahlou a susednou stranou v pravouhlom trojuholníku. Slovo tangens pochádza z latinského slova tangere, čo znamená dotýkať sa. Ono to je aj pekne vidno na jednotkovej kružnici, že tangens sa jej dotýka iba v jednom bode. Ešte sa vráťme ku Girardovi. Okrem slova tangens ževraj aj ako prvý na svete použil skratky pre sínus, kosínus a tangens - sin, cos, tan. No a <b>slovo tangens sa prvý krát objavilo v jeho diele Trigonométrie z roku 1625</b> [3].<br /><br />
 
 Tangens je na jednotkovej kružnici zadefinovaný pomocou "oranžovej čiary" z obrázku č. 1. Dolu na obrázku je vysvetlené, prečo je to práve tá čiara.
@@ -283,7 +283,7 @@ Tangens je na jednotkovej kružnici zadefinovaný pomocou "oranžovej čiary" z 
 
 Rovnako, ako sínus a kosínus, aj <b>tangens sa dá zobraziť viacerými spôsobmi</b>. Na jednotkovej kružnici vidno jeho vzťahy s ostatnými funkciami. Na grafe je vidno jeho vlastnosti. Aj tangens je periodický, v grafe vidno, že sa opakuje. V tabuľke pekne vidno presné hodnoty tangensu pre zvolené uhly.<br /><br />
 
-<b>Tangens nie je spojitá funkcia</b>, čo znamená, že jeho graf nie je jedna dlhá neprerušená čiara. Graf tangensu tvoria krivky, ktoré idú od -&#8734 po &#8734 . Je to preto, lebo pre uhly 90° a 270° "oranžová čiara" z obr. 1. (pomocou ktorej je definovaný tangens) na jednotkovej kružnici ide do nekonečna. Dobre to je vidno na animácií z článku <a href="goniometricke_funkcie#gonio_unitCircleAnimation" target="_blank">Goniometrické funkcie</a>. Do nekonečna ide preto, lebo tangens je dĺžka protiľahlej strany, u nás tá oranžová čiara. Na spomínanej animácií si môžeš všimnúť, že pri 90° a 270° trojuholník nachvíľu zaniká, lebo tá oranžová čiara (protiľahlá strana) sa nepretína s osou <i>x</i>. V tej chvíli oranžová čiara ide do nekonečna a keďže tangens je dĺžka tej čiary, tak aj tangens je nekonečno. Pri uhloch blízkych 90° a 270° sú hodnoty tangensu veľmi veľké, pretože tá oranžová čiara je veľmi dlhá.
+<b>Tangens nie je spojitá funkcia</b>, čo znamená, že jeho graf nie je jedna dlhá neprerušená čiara. Graf tangensu tvoria krivky, ktoré idú od -&#8734; po &#8734;. Je to preto, lebo pre uhly 90° a 270° "oranžová čiara" z obr. 1. (pomocou ktorej je definovaný tangens) na jednotkovej kružnici ide do nekonečna. Dobre to je vidno na animácií z článku <a href="goniometricke_funkcie#gonio_unitCircleAnimation" target="_blank">Goniometrické funkcie</a>. Do nekonečna ide preto, lebo tangens je dĺžka protiľahlej strany, u nás tá oranžová čiara. Na spomínanej animácií si môžeš všimnúť, že pri 90° a 270° trojuholník nachvíľu zaniká, lebo tá oranžová čiara (protiľahlá strana) sa nepretína s osou <i>x</i>. V tej chvíli oranžová čiara ide do nekonečna a keďže tangens je dĺžka tej čiary, tak aj tangens je nekonečno. Pri uhloch blízkych 90° a 270° sú hodnoty tangensu veľmi veľké, pretože tá oranžová čiara je veľmi dlhá.
 
 
 <figure>
@@ -384,7 +384,7 @@ calculator.setExpression({
 <li>Čo robí s grafom zmena písmena <i>d</i>?</li>
 </ul>
 
-<h1>Zdroje</h1>
+<h2>Zdroje</h2>
 <div class='literature'>
 [1] Merlet, J. P. 2004. A NOTE ON THE HISTORY OF TRIGONOMETRIC FUNCTIONS AND SUBSTITUTIONS. http://www.math.stonybrook.edu/~tony/history-resources/HISTORY_OF_TRIGONOMETRIC_F.pdf<br /><br />
 
