--- a/pages/gonio_functions.html
+++ b/pages/gonio_functions.html
@@ -49,7 +49,7 @@ Pomery strán pravouhlých trojuholníkov sme si zatiaľ ukázali iba v prvom kv
 Ten uhol, pre ktorý sa počítajú pomery strán je medzi "polomerom" a tou "bližšou" časťou osi x. Na obrázku je pomenovaný písmeno &#946;. Nás zaujíma uhol medzi "polomerom" a kladnou časťou osi x. Na obrázku je vyznačený písmenom &#945;. Keďže dĺžky čiar sú pre &#945; aj &#946; rovnaké, z tohto pohľadu je jedno, ktorý uhol do funkcie dáme. Dávame však uhol &#945;, lebo ten môže byť hocijako veľký.<br /><br />
 
 <figure>
-  <img src="../assets/images/gonio_unitCircleAngles.png" alt="Podľa uhlu &#946 sa počíta pomer strán, ale do funkcie sa dáva &#945. Pre oba uhly je výsledok rovnaký.">
+  <img src="../assets/images/gonio_unitCircleAngles.png" alt="Podľa uhlu &#946; sa počíta pomer strán, ale do funkcie sa dáva &#945;. Pre oba uhly je výsledok rovnaký.">
   <figcaption>Obr. 5.: Pomery strán v trojuholníkoch by sa počítali pre uhol &#946;. Do funkcie sa  však dáva uhol &#945;, nakoľko vie byť hocijaký (väčší ako 90°, záporný. V podstate hocijaké reálne číslo.). Môžeme tak spraviť preto, lebo hodnoty goniometrických funkcií su pre &#945; a &#946; rovnaké.</figcaption>
 </figure>
 
@@ -58,12 +58,12 @@ Ten uhol, pre ktorý sa počítajú pomery strán je medzi "polomerom" a tou "bl
 Poznáme tri zaužívané spôsoby zobrazovania goniometrických funkcií. Jeden je na jednotkovej kružnici, druhý v grafe a tretí pomocou tabuľky. Na jednotkovej kružnici sú pekne vidieť vzťahy medzi funkciami, ale už horšie sú viditeľné vlastnosti funkcií. S grafom je to naopak. Lepšie sú vidno vlastnosti funkcií, ale horšie sú vidno ich vzájomné vzťahy. V tabuľke zasa ani nie je poriadne vidieť, že je to goniometrická funkcia, ale zato tam vieme vyrátať presné hodnoty funkcií.
 
 <h2>Goniometrické funkcie</h2>
-Goniometrické funkcie sú vysvetlené v zvlásť článkoch, pretože jeden článok by bol príliš dlhý. Tri najznámejšie a najpoužívanejšie - sínus, cosínus a tangens sú <a href="goniometricke_funkcie_sinus_kosinus_tangens" target="_blank">tu</a>. Ich menej známy bratranci cotangens, secans a cosecans sú tu.<br /><br />
+Goniometrické funkcie sú vysvetlené v zvlásť článkoch, pretože jeden článok by bol príliš dlhý. Tri najznámejšie a najpoužívanejšie - sínus, kosínus a tangens sú <a href="goniometricke_funkcie_sinus_kosinus_tangens" target="_blank">tu</a>. Ich menej známy bratranci kotangens, sekans a kosekans sú tu.<br /><br />
 
-<h1>Zdroje</h1>
+<h2>Zdroje</h2>
 <div class='literature'>
 [1] Merlet, J. P. 2004. A NOTE ON THE HISTORY OF TRIGONOMETRIC FUNCTIONS AND SUBSTITUTIONS. http://www.math.stonybrook.edu/~tony/history-resources/HISTORY_OF_TRIGONOMETRIC_F.pdf<br /><br />
 
 [2] Khan Academy. Unit Circle Definition of Trig Functions. https://www.youtube.com/watch?v=ZffZvSH285c&ab_channel=KhanAcademy. <br /><br />
-
+</div>
 </div>
