--- a/pages/gonio_unit_circle.html
+++ b/pages/gonio_unit_circle.html
@@ -19,8 +19,8 @@ Niektoré pramene uvádzajú, že jednotkovú kružnicu poznali už v starom Bab
 </figure>
 
 
-<h1>Zdroje</h1>
+<h2>Zdroje</h2>
 <div class='literature'>
 [1] When did mathematicians invent the unit circle to extend the trig functions? https://hsm.stackexchange.com/questions/11343/when-did-mathematicians-invent-the-unit-circle-to-extend-the-trig-functions
-
+</div>
 </div>
