--- a/pages/vocabulary.html
+++ b/pages/vocabulary.html
@@ -28,13 +28,13 @@ permalink: matematicko-slovensky_slovnik
 <!--.....................................................F..................................................................-->
 <div class='vocabLetter'>F</div>
 <div class='vocabEntry'>
-<b>Frekvencia</b> <div>Ako často sa niečo opakuje. Treba k tomu vedieť nejaké časové obdobie. Napr. ak sa niečo opakuje 2-krát, je rozdiel, či sa to opakuje 2-krát za rok alebo 2-krát za sekundu. Jednotkou frekvencie je Hertz (Hz). Počet Hertzov hovorí o tom, koľko-krát sa niečo zopakuje za 1 sekundu. Ak má niečo napríklad frekvenciu 5Hz, znamená to, že sa to opakuje 5 razy za sekundu. Inak Hertz nie je vymyslené slovo na trápenie žiakov. Heinrich Hertz bol nemecký fyzik, ktorý sa zaujímal o elektromagnetizmus (vďaka tomuto javu môžeš dnes napr. chodiť na internety). Celkom sa mu darilo a tak na jeho počesť pomenovali jednotku frekvencie.</div>
+<b>Frekvencia</b> <div>Ako často sa niečo opakuje. Treba k tomu vedieť nejaké časové obdobie. Napr. ak sa niečo opakuje 2-krát, je rozdiel, či sa to opakuje 2-krát za rok alebo 2-krát za sekundu. Jednotkou frekvencie je Hertz (Hz). Počet Hertzov hovorí o tom, koľkokrát sa niečo zopakuje za 1 sekundu. Ak má niečo napríklad frekvenciu 5Hz, znamená to, že sa to opakuje 5 razy za sekundu. Inak Hertz nie je vymyslené slovo na trápenie žiakov. Heinrich Hertz bol nemecký fyzik, ktorý sa zaujímal o elektromagnetizmus (vďaka tomuto javu môžeš dnes napr. chodiť na internety). Celkom sa mu darilo a tak na jeho počesť pomenovali jednotku frekvencie.</div>
 </div>
 
 <!--.....................................................G..................................................................-->
 <div class='vocabLetter'>G</div>
 <div class='vocabEntry'>
-<b>Goniometria</b> <div>Je oblasť matematiky, ktorá sa zaoberá meraním uhlov a funkciami týchto uhlov: sínus, kosínus, tangens, cotangens, secans a cosecans. Goniometria pochádza z dvoch gréckych slov: gonió - uhol a metró - meranie.</div>
+<b>Goniometria</b> <div>Je oblasť matematiky, ktorá sa zaoberá meraním uhlov a funkciami týchto uhlov: sínus, kosínus, tangens, kotangens, sekans a kosekans. Goniometria pochádza z dvoch gréckych slov: gonió - uhol a metró - meranie.</div>
 </div>
 
 <!--.....................................................H..................................................................-->
@@ -81,7 +81,7 @@ permalink: matematicko-slovensky_slovnik
 <div class='vocabLetter'>R</div>
 
 <div class='vocabEntry'>
-<b>Relatívny</b> <div>V Synonymickom slovníku slovenčiny [2] nájdeme, že slovo relatívny, znamená niečo, čo je je vo vzťahu k niečomu, vzťažné, podmienené. V praxi to znamená niečo takéto. Máme 10 jabĺk. To je absolútne množstvo jabĺk, lebo nevieme o tom povedať, či je to veľa alebo málo. Relatívne množstvo to začne byť vtedy, keď to na niečo vztiahneme. Napríklad na počet detí, ktorým jablká rozdelíme. Keď to dáme na desiatu jednému, asi mu aj zle z toho príde. Keď to rozdelíme pre 1 000 detí, tak sa nikomu neujde skoro nič. Desať jabĺk je vzhľadom na jedno dieťa veľa. Desať jabĺk je vzhľadom na 1 000 detí málo. To je tá relativita.</div><br />
+<b>Relatívny</b> <div>V Synonymickom slovníku slovenčiny [2] nájdeme, že slovo relatívny, znamená niečo, čo je vo vzťahu k niečomu, vzťažné, podmienené. V praxi to znamená niečo takéto. Máme 10 jabĺk. To je absolútne množstvo jabĺk, lebo nevieme o tom povedať, či je to veľa alebo málo. Relatívne množstvo to začne byť vtedy, keď to na niečo vztiahneme. Napríklad na počet detí, ktorým jablká rozdelíme. Keď to dáme na desiatu jednému, asi mu aj zle z toho príde. Keď to rozdelíme pre 1 000 detí, tak sa nikomu neujde skoro nič. Desať jabĺk je vzhľadom na jedno dieťa veľa. Desať jabĺk je vzhľadom na 1 000 detí málo. To je tá relativita.</div><br />
 </div>
 
 <!--.....................................................S..................................................................-->
@@ -111,7 +111,7 @@ Suma je len vznešene zapísané spočítavanie. Keď potrebuješ spočítať ne
 <b>Vertikálny</b> <div>Niečo, čo je zvislo</div>
 </div>
 
-<h1>Zdroje</h1>
+<h2>Zdroje</h2>
 
 <div class='literature'>
 [1] Slovník súčasného slovenského jazyka. 2015. https://slovnik.juls.savba.sk <br /><br />
