Add aGeom_dotProduct and gonio_formulas page
Also add some entries to vocabulary and youtube link

--- a/pages/vocabulary.html
+++ b/pages/vocabulary.html
@@ -16,6 +16,10 @@ permalink: matematicko-slovensky_slovnik
 </div>
 
 <div class='vocabEntry'>
+<b>Algebra</b> <div>Odvetvie matematiky, ktoré sa zaoberá číslami, symbolmi nahrádzajúcimi čísla (písmenkami), matematickými operáciami (+, -, *, /), riešením rovníc. Skrátka všetkým, čo súvisí s číslami. Pochádza z arabského slova al-jabr, ktoré znamená "spojenie rozbitých častí". Toto slovo použil matematik al-Khwariymi v názve svojej knihy, ktorá bola o riešení rovníc.</div><br />
+</div>
+
+<div class='vocabEntry'>
 <b>Amplitúda</b> <div>Je to rozdiel medzi minimom a maximom hodnôt nejakej veličiny.[1] Napríklad pri sínuse alebo kosínuse je to výška vlny.</div><br />
 </div>
 
@@ -88,7 +92,11 @@ permalink: matematicko-slovensky_slovnik
 <div class='vocabLetter'>S</div>
 
 <div class='vocabEntry'>
-<b>Spojitý</b> <div>spojitý znamená neprerušovaný. Je to niečo, čo ide stále v jednom kuse. V matematike sa toto slovo používa napríklad pri funkciách. Znamená to, že funkcia ide bez prerušenia. Jej graf sa dá nakresliť jednou súvislou čiarou.</div>
+<b>Skalár</b> <div>Skalár je veličina zapísaná iba jedným číslom (nie vektorom). Slovo pochádza z latinského "scalaris". Preklad toho latinského slova má niečo spoločné  s rebríkom, týkajúce sa rebríka. Objavilo sa v roku 1650. Pre reálne čísla ho začal používať matematik Hamilton v roku 1846. Prečo pomenoval reálne čísla týmto slovom, vie asi len on sám.</div>
+</div><br />
+
+<div class='vocabEntry'>
+<b>Spojitý</b> <div>Spojitý znamená neprerušovaný. Je to niečo, čo ide stále v jednom kuse. V matematike sa toto slovo používa napríklad pri funkciách. Znamená to, že funkcia ide bez prerušenia. Jej graf sa dá nakresliť jednou súvislou čiarou.</div>
 </div><br />
 
 <div class='vocabEntry'>
