Remove fbclid from urls
Signed-off-by: mathematikos <mathematikos.github@gmail.com>

--- a/pages/gonio_functionsUsage.html
+++ b/pages/gonio_functionsUsage.html
@@ -251,11 +251,11 @@ Pre niekoho možno prekvapujúca informácia, ale <b>zvieratá počujú inak ako
 
 [5] Jannereth E., Esch L.: Analyzing Timbres of Various Musical Instruments Using FFT and Spectral Analysis. 2021.<br /><br />
 
-[6] Lafayette Hearing Center. 2015. Four animal facts: Hearing edition. https://www.lafayettehearingcenter.com/blog/four-animal-facts-hearing-edition/?fbclid=IwAR3Qazhmf5Enec4P46-u3X1b2qZiUB_jzA-4cyZ8fKPVY015PmhHQ0emqK0<br /><br />
+[6] Lafayette Hearing Center. 2015. Four animal facts: Hearing edition. https://www.lafayettehearingcenter.com/blog/four-animal-facts-hearing-edition/<br /><br />
 
-[7] Audiology Hearing Center. 2022. Four animal facts: Hearing edition (Part 2). https://www.wkyhearing.com/blog/four-animal-facts-hearing-edition-pt-2/?fbclid=IwAR0kJZw8bkLrFV9zenqJELpo62vaao0BWuG5535NVqmEPunuCSUzOg13too<br /><br />
+[7] Audiology Hearing Center. 2022. Four animal facts: Hearing edition (Part 2). https://www.wkyhearing.com/blog/four-animal-facts-hearing-edition-pt-2/<br /><br />
 
-[8] SIMPSON D.: How do pigeons find their way home? We looked in their ears with a diamond-based quantum microscope to find out. 15.11.2021. https://findanexpert.unimelb.edu.au/news/34101-how-do-pigeons-find-their-way-home%3F-we-looked-in-their-ears-with-a-diamond-based-quantum-microscope-to-find-out?fbclid=IwAR0kJZw8bkLrFV9zenqJELpo62vaao0BWuG5535NVqmEPunuCSUzOg13too#:~:text=We%20know%20pigeons%20use%20visual,navigate%20using%20Earth's%20magnetic%20field
+[8] SIMPSON D.: How do pigeons find their way home? We looked in their ears with a diamond-based quantum microscope to find out. 15.11.2021. https://findanexpert.unimelb.edu.au/news/34101-how-do-pigeons-find-their-way-home%3F-we-looked-in-their-ears-with-a-diamond-based-quantum-microscope-to-find-out
 
 </div>
 
